# sicnpcf-backend

./: .gitignore  Dockerfile  README.md  conftest.py  pyproject.toml
.github/workflows/: build.yml  ci.yml  deploy-dev.yml
apps/audiencias/: apps.py
apps/core/: managers.py  serializers.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py
apps/core/models/: __init__.py  catalogos.py  mixins.py
apps/core/tests/: factories.py  test_catalogo_views.py  test_catalogos.py  test_health.py  test_mixins.py  test_openapi_merge.py  test_pagination.py  test_schema_endpoint.py
apps/estadistica/: apps.py
apps/exhortos/: apps.py
apps/expediente/: apps.py
apps/firma/: apps.py
apps/juicio_linea/: apps.py
apps/juicios_esp/: apps.py
apps/oficialia/: apps.py
apps/registros/: apps.py
apps/tribunal_2a/: apps.py
apps/turnado/: apps.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/auth/: __init__.py  interfaces.py  ldap.py  local.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: factories.py  test_factories_smoke.py  test_local_directory.py  test_login_view.py  test_logout_view.py  test_me_view.py  test_refresh_view.py  test_user_model.py
config/: celery.py  openapi_manual.yaml  openapi_postprocess.py  urls.py
config/settings/: base.py  development.py  pre_prod.py  production.py  qa.py
requirements/: base.txt  dev.txt  prod.txt
